update school API with state field
